    using select(['id']), which is equivalent to
    select([literal_column('id')]), stopped working
    here, so this has been re-instated and of
    course tested. [ticket:2558]

  - [bug] Added missing operators is_(), isnot()
    to the ColumnOperators base, so that these long-available
    operators are present as methods like all
    the other operators.  [ticket:2544]


- engine
  - [bug] Fixed bug whereby
    a disconnect detect + dispose that occurs
    when the QueuePool has threads waiting
    for connections would leave those
    threads waiting for the duration of
    the timeout on the old pool (or indefinitely
    if timeout was disabled).   The fix
    now notifies those waiters with a special
    exception case and has them move onto
    the new pool.  [ticket:2522]

  - [feature] Dramatic improvement in memory
    usage of the event system; instance-level
    collections are no longer created for a
    particular type of event until
    instance-level listeners are established
    for that event.  [ticket:2516]

  - [bug] Added gaerdbms import to mysql/__init__.py,
    the absense of which was preventing the new
    GAE dialect from being loaded.  [ticket:2529]

  - [bug] Fixed cextension bug whereby the
    "ambiguous column error" would fail to
    function properly if the given index were
    a Column object and not a string.
    Note there are still some column-targeting
    issues here which are fixed in 0.8.
    [ticket:2553]

  - [bug] Fixed the repr() of Enum to include
    the "name" and "native_enum" flags.  Helps
    Alembic autogenerate.

- sqlite
  - [bug] Adjusted a very old bugfix which attempted
    to work around a SQLite issue that itself was
    "fixed" as of sqlite 3.6.14, regarding quotes
    surrounding a table name when using
    the "foreign_key_list" pragma.  The fix has been
    adjusted to not interfere with quotes that
    are *actually in the name* of a column or table,
    to as much a degree as possible; sqlite still