@@ -827,6 +827,12 @@ are also present in 0.8.
     operators are present as methods like all
     the other operators.  [ticket:2544]
 
+  - [bug] When the primary key column of a Table
+    is replaced, such as via extend_existing,
+    the "auto increment" column used by insert()
+    constructs is reset.  Previously it would
+    remain referring to the previous primary
+    key column.  [ticket:2525]
 
 - engine
   - [bug] Fixed bug whereby
